Fixing all the button issues and making the code more readable

--- a/css/whomp.css
+++ b/css/whomp.css
@@ -62,6 +62,10 @@ button {
     display: none;
   }
 
+  .round {
+    display: none;
+  }
+
   .centerButton {
     margin: 0;
     position: absolute;
